syntax = "proto3";

option csharp_namespace = "NameFixer.gRPCServices";
import "google/api/annotations.proto";

package namefixer.lastnames;

service LastNameService {
  rpc GetLastNameSuggestions (GetLastNameSuggestionsRequest) returns (GetLastNameSuggestionsResponse) {
    option (google.api.http) = {
      get: "/LastNameService/{last_name}"
    };
  }
}

message GetLastNameSuggestionsRequest {
  string last_name = 1;
}

message GetLastNameSuggestionsResponse {
  repeated string last_name_suggestions = 1;
}